fixed-23493: Backed Store View Specific Labels and Manage Coupon Codes label and input not aligned properly

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_store-scope.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_store-scope.less
@@ -15,7 +15,6 @@
         }
 
         .label.admin__field-label {
-            text-align: right;
             float: left;
             margin-left: 30px;
             text-align: right;
